@@ -7,7 +7,8 @@ SRC2TEXI = src2texi
 noinst_SCRIPTS = $(HELP2MAN) $(SRC2TEXI)
 
 # The unfinished manuals.
-UNFINISHED_MANUALS = new-grub.texi tutorial.texi user-ref.texi
+UNFINISHED_MANUALS = new-grub.texi tutorial.texi user-ref.texi \
+	prog-ref.texi appendices.texi
 
 EXTRA_DIST = menu.lst $(man_MANS) $(noinst_SCRIPTS) \
 	$(EXAMPLES) $(multiboot_TEXINFOS) $(UNFINISHED_MANUALS)
